# rust-diesel-lab

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-09-09-185018_create_contracts/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
