[package]
name = "rust-diesel-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = {version="2.2.4", features=["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"]}
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
clap = { version = "4.5.17", features = ["derive"] }
chrono = "0.4.38"

